--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,6 +8,11 @@
   background: rgba(255,255,255,.3);
 }
 
+.siteName {
+  color: white !important;
+  padding-top: 5px;
+}
+
 .content {
   display: flex;
   align-items:  center;
